Adding some Java to the mix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,18 @@ rabbitmq:
   ports:
   - 5672:5672 # port for the daemon API
   - 15672:15672 # port for the RabbitMQ management interface
-consumer:
-  build: consumer
+java_consumer:
+  build: java/consumer
+  links:
+  - rabbitmq
+  command: build.sh 5672 ${RABBIT_HOST_IP}
+py_consumer:
+  build: python/consumer
   links:
   - rabbitmq
   command: python consumer.py -p 5672 -s ${RABBIT_HOST_IP}
-producer:
-  build: producer
+py_producer:
+  build: python/producer
   links:
   - rabbitmq
   # run the producer sending the message "Hello" 30 times
