Java and Python examples are working

--- a/java/producer/Dockerfile
+++ b/java/producer/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:8-jdk
 
 MAINTAINER Brian Schlining <bschlining@gmail.com>
 
-ENV APP_HOME /opt/java/consumer
+ENV APP_HOME /opt/java/producer
 
 RUN mkdir -p ${APP_HOME}
 
