--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,26 @@ rabbitmq:
   image: rabbitmq:3-management
   restart: always
   ports:
-  - 5672:5672 # port for the daemon API
-  - 15672:15672 # port for the RabbitMQ management interface
+   - 5672:5672 # port for the daemon API
+   - 15672:15672 # port for the RabbitMQ management interface
 java_consumer:
   build: java/consumer
   links:
-  - rabbitmq
-  command: build.sh 5672 ${RABBIT_HOST_IP}
+   - rabbitmq
+  command: java -cp /opt/java/consumer:/opt/java/consumer/lib/\* Consumer 5672 ${RABBIT_HOST_IP}
+java_producer:
+  build: java/producer
+  links:
+   - rabbitmq
+  command: java -cp /opt/java/producer:/opt/java/producer/lib/\* Producer 5672 ${RABBIT_HOST_IP} "Hello from Java"
 py_consumer:
   build: python/consumer
   links:
-  - rabbitmq
+   - rabbitmq
   command: python consumer.py -p 5672 -s ${RABBIT_HOST_IP}
 py_producer:
   build: python/producer
   links:
-  - rabbitmq
+   - rabbitmq
   # run the producer sending the message "Hello" 30 times
-  command: python producer.py -p 5672 -s ${RABBIT_HOST_IP} -m "Hello" -r 30
+  command: python producer.py -p 5672 -s ${RABBIT_HOST_IP} -m "Hello from python" -r 30
